# fadors_dos_emu

./: .gitignore  AGENTS.md  CMakeLists.txt  DOS_SHELL_PLAN.md  DOS_new.cpp  LICENSE  README.md  TODO.md  dos_file_service.cpp  patch_tests.diff  test_int  test_int.cpp
docs/: readme.txt
src/: main.cpp
src/cpu/: Assembler.cpp  Assembler.hpp  CPU.cpp  CPU.hpp  Disassembler.cpp  Disassembler.hpp  InstructionDecoder.cpp  InstructionDecoder.hpp
src/hw/: BIOS.cpp  BIOS.hpp  BatchInterpreter.cpp  BatchInterpreter.hpp  CMOSRTC.cpp  CMOSRTC.hpp  DMA8237.cpp  DMA8237.hpp  DOS.cpp  DOS.hpp  DPMI.cpp  DPMI.hpp  DosShell.cpp  DosShell.hpp  DriveManager.cpp  DriveManager.hpp  IOBus.cpp  IOBus.hpp  IODevice.hpp  Joystick.hpp  KeyboardController.cpp  KeyboardController.hpp  PIC8259.cpp  PIC8259.hpp  PIT8254.cpp  PIT8254.hpp  ProgramLoader.cpp  ProgramLoader.hpp  VGAController.cpp  VGAController.hpp  VideoMode.hpp
src/hw/audio/: AdLib.cpp  AdLib.hpp  AudioBackend.cpp  AudioBackend.hpp  MidiDevice.cpp  MidiDevice.hpp  MidiInstruments.hpp  MidiSynth.cpp  MidiSynth.hpp  SoundBlaster.cpp  SoundBlaster.hpp
src/memory/: MemoryBus.cpp  MemoryBus.hpp
src/memory/himem/: HIMEM.cpp  HIMEM.hpp
src/ui/: Debugger.cpp  Debugger.hpp  InputManager.cpp  InputManager.hpp  SDLRenderer.cpp  SDLRenderer.hpp  TerminalRenderer.cpp  TerminalRenderer.hpp
src/utils/: CrashHandler.cpp  CrashHandler.hpp  Logger.hpp
tests/: test_addressing_modes.cpp  test_adlib.cpp  test_assembler.cpp  test_audio_backend.cpp  test_batch.cpp  test_bios.cpp  test_bios_hle.cpp  test_cmos_rtc.cpp  test_cpu.cpp  test_cpu_behavior.cpp  test_debugger.cpp  test_disassembler.cpp  test_dma8237.cpp  test_dos.cpp  test_dos_directories.cpp  test_dos_drive.cpp  test_dos_memory.cpp  test_dos_search.cpp  test_dpmi.cpp  test_drive_manager.cpp  test_framework.hpp  test_himem.cpp  test_hw_devices.cpp  test_instruction_decoder.cpp  test_int_asm.cpp  test_interrupts.cpp  test_iobus.cpp  test_main.cpp  test_midi.cpp  test_perf.cpp  test_pic8259.cpp  test_pit8254.cpp  test_program_loader.cpp  test_soundblaster.cpp  test_vga_and_irq.cpp
tests/hw/: test_vga_controller.cpp
tests/memory/: test_memory_bus.cpp
tests/memory/himem/: test_himem.cpp
